# CV

cargame/: S31516P02.java
cargame/game/: Board.java  Game.java  MyThread.java  PlusOneEvent.java  ResetEvent.java  StartEvent.java  TickEvent.java
cargame/pres/: Frame.java  ImagePanel.java  SevenSegmentDigit.java  Table.java  TableRenderer.java
farm/: animal_menu.py  animals.py  chosen_user.py  game.py  game_ui.py  menu.py  options.py  price_manager.py  prices.json  prices.py  shop_menu.py  storage_menu.py  testUser.json  user.py  user_menu.py
farm/assets/: moo.aiff
farm/users/: qwjdnqj.json  shav1x.json
language perceptron/: Dataset.py  Perceptron.py  main.py
monkeytyper/: CMakeLists.txt  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  Options.cpp  Options.h  Words1.txt  main.cpp
